--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -202,6 +202,9 @@ jobs:
       - name: print all outputs
         run: |
           echo       runners: ${{ steps.runners.outputs.runners }}       environment: ${{ steps.environment.outputs.environment }}      imagetag: ${{ steps.imagetag.outputs.imagetag }}      app: ${{ steps.imagetag.outputs.app }}      rebuildManifest: ${{ steps.did-manifest-change.outputs.any_changed }}
+      - name: print logic
+        run: |
+          echo ${{ success() }} || ${{ failure()}} && (( ${{needs.tests.result}} =='success' || ${{needs.tests.result}} =='skipped' )|| ${{github.event_name}} == 'pull_request') && ${{inputs.PoChujMiBuildImage}}
 
   tests:
     if: ${{ inputs.SkipTests != true }}
