--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -386,10 +386,14 @@ jobs:
           username: ${{ secrets.docker-login }}
           password: ${{ secrets.docker-pass }} 
           ecr: false
+
       - name: authenticate to NPM
         if: inputs.UseNPM
         run: |
           echo ${{ secrets.nmprc }} >> .npmrc
+          ls -al ./
+          cat .npmrc
+          echo ${{github.event_name}}
 
       - name: Build and push Docker images
         uses: docker/build-push-action@v3.3.0
