--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -348,7 +348,7 @@ jobs:
         if: inputs.UseNPM
         run: |
           rm -f .npmrc
-          echo ${{secrets.npmrc}} > .npmrc
+          echo "${{secrets.npmrc}}" > .npmrc
           ls -al ./
           cat .npmrc
           echo ${{github.event_name}}
