--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -26,29 +26,29 @@ on:
         required: false
         type: string
         default: "./src/"
+        description: "where is the code to be tested"
       SkipUnitTests:
         type: boolean
         required: false
       RunBehatTests:
         type: boolean
         required: false        
-        default: false     
-      UnitTestsExecutable:
-        required: false
-        type: string
-        default: "./vendor/bin/phpunit"
+        default: false
       PhpVersion:
         required: false
         type: string
         default: "8.1"
+        description: "php version to use, with minor version, no bugfix versions. default 8.1"
       PoChujMiBuildImage:
         required: false
         type: boolean
         default: true
+        description: "enable 'Michal' mode for building image"
       UseMakeTargets:
         required: false
         type: string
         default: ""
+        description: "If you are using makefile in project - specify targets here"
       PhpExtensions:
         type: string
         required: false
@@ -57,36 +57,42 @@ on:
         type: string
         required: false
         default: "loyalty-factory-aps"
+        description: "Sentry Organisation"
       SentryProjectName:
         type: string
         required: false
         default: ""
-        description: ""
+        description: "Name of a Sentry Project to use"
       EnableSentryRelease: 
         type: boolean
         required: false
         default: false
+        description: "enable/disable Sentry release"
       SentryUploadSourceMaps:
         type: boolean
         required: false
         default: false
+        description: "If You want to upload sourcemaps to sentry"
       SentryTargetEnvironment:
         type: string
         required: false
         default: "production"
-        description: ""
+        description: "Target environment to build for Sentry"
       ApplicationLanguage:
         type: string
         required: false
         default: "php"
+        description: "Language used in repository (default - php, possible options: nodejs)"
       UseManifest:
         type: boolean
         default: true
         required: false
+        description: "wether the application uses Manifest or not"
       UseNPM:
         type: boolean
         default: false
         required: false
+        description: "UseNPM enables/disables the access to NPM repository"
 
     secrets:
       token:
@@ -307,18 +313,18 @@ jobs:
         run: |
           manifest chart generate && helmpush chart "${{secrets.chartmuseum-url}}" --version "0.0.0-${{github.sha}}"
 
-  # testofskip:
-  #   needs: setup_variables
-  #   runs-on: ${{needs.setup_variables.outputs.runners}}
-  #   steps:
-  #     - name: test
-  #       if: ${{ always() && ( needs.tests.result =='success' || needs.tests.result =='skipped' ) }}
-  #       run: echo "dupa"
+  testofskip:
+    needs: setup_variables
+    runs-on: ${{needs.setup_variables.outputs.runners}}
+    steps:
+      - name: test
+        if: ${{success() || failure() && (( needs.tests.result =='success' || needs.tests.result =='skipped' )|| github.event_name == 'pull_request') && inputs.PoChujMiBuildImage }}
+        run: echo "dupa"
 
   build-image:
     timeout-minutes: 15
-    needs: [ "setup_variables", tests]
-    if: always() || (success() || failure() && (( needs.tests.result =='success' || needs.tests.result =='skipped' )|| github.event_name == 'pull_request') && inputs.PoChujMiBuildImage)
+    needs: [ "setup_variables", "tests" ]
+    if: (success() || failure() && (( needs.tests.result =='success' || needs.tests.result =='skipped' )|| github.event_name == 'pull_request') && inputs.PoChujMiBuildImage)
     env: 
       GITHUB_TOKEN: ${{ secrets.token }}
     runs-on: ${{needs.setup_variables.outputs.runners}}
@@ -395,7 +401,6 @@ jobs:
           username: ${{ secrets.docker-login }}
           password: ${{ secrets.docker-pass }} 
           ecr: false
-
 
       - name: Build and push Docker images
         uses: docker/build-push-action@v3.3.0
