build args correction

--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -406,7 +406,7 @@ jobs:
         uses: docker/build-push-action@v3.3.0
         with:
           build-args: |
-            "IMAGE_VERSION=${{GITHUB_SHA}}"
+            "IMAGE_VERSION=$GITHUB_SHA"
           context: .
           allow: network.host
           network: host
