--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -312,18 +312,18 @@ jobs:
         run: |
           manifest chart generate && helmpush chart "${{secrets.chartmuseum-url}}" --version "0.0.0-${{github.sha}}"
 
-  testofskip:
-    needs: setup_variables
-    runs-on: ${{needs.setup_variables.outputs.runners}}
-    steps:
-      - name: test
-        if: ${{success() || failure() && (( needs.tests.result =='success' || needs.tests.result =='skipped' )|| github.event_name == 'pull_request') && inputs.PoChujMiBuildImage }}
-        run: echo "dupa"
+  # testofskip:
+  #   needs: setup_variables
+  #   runs-on: ${{needs.setup_variables.outputs.runners}}
+  #   steps:
+  #     - name: test
+  #       if: ${{success() || failure() && (( needs.tests.result =='success' || needs.tests.result =='skipped' )|| github.event_name == 'pull_request') && inputs.PoChujMiBuildImage }}
+  #       run: echo "dupa"
 
   build-image:
     timeout-minutes: 15
     needs: [ "setup_variables", "tests" ]
-    if: (success() || failure() && (( needs.tests.result =='success' || needs.tests.result =='skipped' )|| github.event_name == 'pull_request') && inputs.PoChujMiBuildImage)
+    if: success() || failure() && (( needs.tests.result =='success' || needs.tests.result =='skipped' )|| github.event_name == 'pull_request') && inputs.PoChujMiBuildImage
     env: 
       GITHUB_TOKEN: ${{ secrets.token }}
     runs-on: ${{needs.setup_variables.outputs.runners}}
