--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -224,6 +224,7 @@ jobs:
           submodules: recursive
 
       - uses: shivammathur/setup-php@2.24.0
+        if: inputs.ApplicationLanguage == "php"
         with:
           php-version: ${{inputs.PhpVersion}}
           extensions: ${{inputs.PhpExtensions}}
@@ -233,30 +234,32 @@ jobs:
           runner: ${{needs.setup_variables.outputs.runners}}
 
       - name: run Composer
+        if: inputs.ApplicationLanguage == "php"
         run: |
           composer install --prefer-dist --no-ansi --no-progress --no-interaction ${{ inputs.ComposerAdditionalArguments }}
       
       - name: make files
+        if: inputs.ApplicationLanguage == "php"
         shell: sh
         if: ${{ inputs.UseMakeTargets != '' }}
         run: |
           make ${{ inputs.UseMakeTargets }} -O -k
 
       - name: phpcs
-        if: success() || failure()
+        if: (success() || failure()) && inputs.ApplicationLanguage == "php"
         run: |
           composer exec -- phpcs ${{ inputs.PhpcsWorkdir }}
 
       - name: phplint
-        if: success() || failure()      
+        if: (success() || failure()) && inputs.ApplicationLanguage == "php"
         run: |
           find . -name '*.php' -not -path './vendor/*' -print0 | xargs -0 php -l
 
       - name: phpunit
-        if: success() || failure() && inputs.SkipUnitTests != true
+        if: (success() || failure()) && inputs.ApplicationLanguage == "php" && inputs.SkipUnitTests != true
         run: |
           composer exec -- phpunit
-      
+      - name: node
 
   behat:
     if: inputs.RunBehatTests
