--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -260,7 +260,7 @@ jobs:
           composer exec -- phpunit
 
       - name: nodesasdqwe
-        if: inputs.ApplicationLanguage == "nodejs"
+        if: inputs.ApplicationLanguage == 'nodejs'
         uses: docker://node:15.12.0
         env:
           APPCONFIG_API: "//api.domain"
