--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -261,7 +261,7 @@ jobs:
 
       - name: nodesasdqwe
         if: inputs.ApplicationLanguage == 'nodejs'
-        uses: docker://node:15.12.0
+        uses: addnab/docker-run-action@v3
         env:
           APPCONFIG_API: "//api.domain"
           APPCONFIG_SOCKETAUTH: "//api.domain/socket"
@@ -269,6 +269,7 @@ jobs:
           CONFIG_API_URL: "http://api.domain"
           CONFIG_AUTH_URL: "http://api.domain/token"
         with:
+          image: node:15.12.0
           run: |
             rm -f .npmrc
             echo "${{secrets.npmrc}}" > .npmrc
@@ -277,29 +278,33 @@ jobs:
 
       - name: karma tests
         if: inputs.ApplicationLanguage == 'nodejs'
-        uses: docker://buildkite/puppeteer:latest
+        uses: addnab/docker-run-action@v3
         with:
+          image: buildkite/puppeteer:latest
           run: |
             npm run test:karma
 
       - name: jest tests
         if: inputs.ApplicationLanguage == 'nodejs'
-        uses: docker://node:15.12.0
+        uses: addnab/docker-run-action@v3
         with:
+          image: node:15.12.0
           run: |
             npm run test:jest
 
       - name: jest jscs
         if: inputs.ApplicationLanguage == 'nodejs'
-        uses: docker://node:15.12.0-alpine
+        uses: addnab/docker-run-action@v3
         with:
+          image: node:15.12.0-alpine
           run: |
             node_modules/.bin/jscs --config=.jscsrc src/app
 
       - name: jest jscs
         if: inputs.ApplicationLanguage == 'nodejs'
-        uses: docker://node:15.12.0-alpine
+        uses: addnab/docker-run-action@v3
         with:
+          image: node:15.12.0-alpine
           run: |
             npm run test:eslint
 
