--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -367,13 +367,13 @@ jobs:
         run: |
           manifest chart generate && helmpush chart "${{secrets.chartmuseum-url}}" --version "0.0.0-${{github.sha}}"
 
-  # testofskip:
-  #   needs: setup_variables
-  #   runs-on: ${{needs.setup_variables.outputs.runners}}
-  #   steps:
-  #     - name: test
-  #       if: ${{success() || failure() && (( needs.tests.result =='success' || needs.tests.result =='skipped' )|| github.event_name == 'pull_request') && inputs.PoChujMiBuildImage }}
-  #       run: echo "dupa"
+  testofskip:
+    needs: setup_variables
+    runs-on: ${{needs.setup_variables.outputs.runners}}
+    steps:
+      - name: test
+        if: (success() || failure()) && (( needs.tests.result =='success' || needs.tests.result =='skipped' )|| github.event_name == 'pull_request') && inputs.PoChujMiBuildImage
+        run: echo "dupa"
 
   build-image:
     timeout-minutes: 15
