--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -368,7 +368,7 @@ jobs:
           manifest chart generate && helmpush chart "${{secrets.chartmuseum-url}}" --version "0.0.0-${{github.sha}}"
 
   testofskip:
-    needs: setup_variables
+    needs: [ "setup_variables", "tests" ]
     runs-on: ${{needs.setup_variables.outputs.runners}}
     steps:
       - name: test
