--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -367,17 +367,17 @@ jobs:
         run: |
           manifest chart generate && helmpush chart "${{secrets.chartmuseum-url}}" --version "0.0.0-${{github.sha}}"
 
-  testofskip:
-    needs: [ "setup_variables", "tests" ]
-    runs-on: ${{needs.setup_variables.outputs.runners}}
-    steps:
-      - name: test
-        if: |
-          always() && 
-          !contains(needs.*.result, 'failure') &&
-          !contains(needs.*.result, 'canceled') &&
-          inputs.PoChujMiBuildImage
-        run: echo "dupa"
+  # testofskip:
+  #   needs: [ "setup_variables", "tests" ]
+  #   runs-on: ${{needs.setup_variables.outputs.runners}}
+  #   steps:
+  #     - name: test
+  #       if: |
+  #         always() && 
+  #         !contains(needs.*.result, 'failure') &&
+  #         !contains(needs.*.result, 'canceled') &&
+  #         inputs.PoChujMiBuildImage
+  #       run: echo "dupa"
 
   build-image:
     timeout-minutes: 15
