--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -460,16 +460,14 @@ jobs:
           build-args: |
             IMAGE_VERSION=$GITHUB_SHA
             ENVIRONMENT=${{ needs.setup_variables.outputs.environment }}
+            SENTRY_ORG=${{inputs.SentryOrganisation}}
+            SENTRY_AUTH_TOKEN=${{secrets.sentry-auth-token}}
+            SENTRY_PROJECT=${{inputs.SentryProjectName}}
           context: .
           allow: network.host
-          cache-to: |
-            type=local,dest=./build-cache
           network: host
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           secrets: |
             GIT_AUTH_TOKEN=${{ secrets.numa-numa-token }}
           github-token: ${{ secrets.numa-numa-token }}
-      - name: test the cache of build
-        run: |
-          ls -al ./build-cache
