--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -458,7 +458,7 @@ jobs:
         uses: docker/build-push-action@v3.3.0
         with:
           build-args: |
-            IMAGE_VERSION=$GITHUB_SHA
+            IMAGE_VERSION=${{ GITHUB_SHA }}
             ENVIRONMENT=${{ needs.setup_variables.outputs.environment }}
             SENTRY_ORG=${{inputs.SentryOrganisation}}
             SENTRY_AUTH_TOKEN=${{secrets.sentry-auth-token}}
