--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -507,7 +507,7 @@ jobs:
     
       - name: summary
         run: |
-          echo IMAGE_VERSION: ${{ needs.setup_variables.outputs.github-sha }} >> $GITHUB_JOB_SUMMARY
-          echo IMAGE TAGS : ${{ steps.meta.outputs.tags }} >> >> $GITHUB_JOB_SUMMARY
+          echo IMAGE_VERSION: ${{ needs.setup_variables.outputs.github-sha }} >> $GITHUB_STEP_SUMMARY
+          echo IMAGE TAGS : ${{ steps.meta.outputs.tags }} >> $GITHUB_STEP_SUMMARY
 
 
