added network host to docker run stepps

--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -243,6 +243,7 @@ jobs:
   tests:
     if: ${{ inputs.SkipTests != true }}
     needs: setup_variables
+    network: host
     env: 
      GITHUB_TOKEN: ${{ secrets.numa-numa-token }}
     runs-on: ${{needs.setup_variables.outputs.runners}}
@@ -304,8 +305,8 @@ jobs:
         if: inputs.ApplicationLanguage == 'nodejs'
         uses: addnab/docker-run-action@v3
         with:
-          image: node:${{ inputs.NodeVersion }}
-          options: -v ${{ github.workspace }}:/work -e APPCONFIG_API=//api.domain" -e APPCONFIG_SOCKETAUTH="//api.domain/socket" -e APPCONFIG_UPLOAD="//api.domain" -e CONFIG_API_URL="http://api.domain" -e CONFIG_AUTH_URL="http://api.domain/token"
+          image: node:${{ inputs.NodeVersion }} 
+          options: -v ${{ github.workspace }}:/work -e APPCONFIG_API=//api.domain" -e APPCONFIG_SOCKETAUTH="//api.domain/socket" -e APPCONFIG_UPLOAD="//api.domain" -e CONFIG_API_URL="http://api.domain" -e CONFIG_AUTH_URL="http://api.domain/token" --network host
           run: |
             cd /work/
             rm -f .npmrc
@@ -318,7 +319,7 @@ jobs:
         uses: addnab/docker-run-action@v3
         with:
           image: buildkite/puppeteer:latest
-          options: -v ${{ github.workspace }}:/work
+          options: -v ${{ github.workspace }}:/work --network host
           run: |
             cd /work/
             npm run test:karma --no-sandbox
@@ -327,8 +328,8 @@ jobs:
         if: inputs.ApplicationLanguage == 'nodejs' && !inputs.DisableJestTests
         uses: addnab/docker-run-action@v3
         with:
-          image: node:${{ inputs.NodeVersion }}
-          options: -v ${{ github.workspace }}:/work
+          image: node:${{ inputs.NodeVersion }} 
+          options: -v ${{ github.workspace }}:/work --network host
           run: |
             cd /work/
             npm run test:jest ${{ inputs.AdditionalJestParameters }}
@@ -337,8 +338,8 @@ jobs:
         if: inputs.ApplicationLanguage == 'nodejs' && !inputs.DisableJestTests
         uses: addnab/docker-run-action@v3
         with:
-          image: node:${{ inputs.NodeVersion }}-alpine
-          options: -v ${{ github.workspace }}:/work
+          image: node:${{ inputs.NodeVersion }}-alpine 
+          options: -v ${{ github.workspace }}:/work --network host
           run: |
             cd /work/
             node_modules/.bin/jscs --config=.jscsrc src/app
@@ -348,7 +349,7 @@ jobs:
         uses: addnab/docker-run-action@v3
         with:
           image: node:${{ inputs.NodeVersion }}-alpine
-          options: -v ${{ github.workspace }}:/work
+          options: -v ${{ github.workspace }}:/work --network host
           run: |
             cd /work/
             npm run test:eslint
