--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -376,7 +376,7 @@ jobs:
       - name: lets fire up the app
         env:
           SHELL_VERBOSITY: "-1"
-        run: mkdir www && php -d error_reporting="E_ALL & ~E_NOTICE & ~E_DEPRECATED" -S 0.0.0.0:8000 -t www public/index.php &           
+        run: whoami && mkdir www && php -d error_reporting="E_ALL & ~E_NOTICE & ~E_DEPRECATED" -S 0.0.0.0:8000 -t www public/index.php &           
        
       - name: and test it
         uses: php-actions/behat@v1
